fix button and button sc

--- a/src/main/resources/static/css/Form-css.css
+++ b/src/main/resources/static/css/Form-css.css
@@ -54,6 +54,10 @@ text-error {
     clear: both;
 }
 
+.lineSpace{
+  margin-top: 10px;
+}
+
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
     .col-15, .col-65, input[type=submit] {
