--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -200,7 +200,7 @@ th {
   }
   a,
   a:visited {
-
+    text-decoration: underline;
   }
   a[href]:after {
     content: " (" attr(href) ")";
@@ -1102,6 +1102,8 @@ a {
 }
 a:hover,
 a:focus {
+  color: #23527c;
+  text-decoration: underline;
 }
 a:focus {
   outline: 5px auto -webkit-focus-ring-color;
