--- a/src/main/resources/templates/form/formCreate.html
+++ b/src/main/resources/templates/form/formCreate.html
@@ -374,8 +374,8 @@
         </div>
         <h3>Load Test SC: </h3>
         <div class="row">
-            <div class="col-90">
-                <table class="table-sc">
+            <div class="col-100">
+                <table class="table-sc" width="100%">
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
@@ -408,15 +408,15 @@
                 </table>
             </div>
             <div class="col-10">
-                <button type="button" name="addRowLoadTest" onclick="addChild('addRowLoadTest','formCreate')"
+                <button class="buttonGreen" type="button" name="addRowLoadTest" onclick="addChild('addRowLoadTest','formCreate')"
                         th:text="#{label.addRow}">Add row
                 </button>
             </div>
         </div>
         <h3>Reliability Test SC: </h3>
         <div class="row">
-            <div class="col-90">
-                <table class="table-sc">
+            <div class="col-100">
+                <table class="table-sc" width="100%">
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
@@ -449,15 +449,15 @@
                 </table>
             </div>
             <div class="col-10">
-                <button type="button"  onclick="addChild('addRowReliTest','formCreate')"
+                <button class="buttonGreen" type="button"  onclick="addChild('addRowReliTest','formCreate')"
                         th:text="#{label.addRow}">Add row
                 </button>
             </div>
         </div>
         <h3>Stress Test SC: </h3>
         <div class="row">
-            <div class="col-90">
-                <table class="table-sc">
+            <div class="col-100">
+                <table class="table-sc" width="100%">
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
@@ -490,13 +490,14 @@
                 </table>
             </div>
             <div class="col-10">
-                <button type="button"  onclick="addChild('addRowStressTest','formCreate')"
+                <button class="buttonGreen" type="button"  onclick="addChild('addRowStressTest','formCreate')"
                         th:text="#{label.addRow}">Add row
                 </button>
             </div>
         </div>
+        <div class="lineSpace"></div>
         <div class="row">
-            <input class="button" type="submit" value="Submit">
+            <input class="buttonGreen width-10" type="submit" value="Submit">
         </div>
     </form>
 </div>
