--- a/src/main/resources/templates/form/formEdit.html
+++ b/src/main/resources/templates/form/formEdit.html
@@ -497,7 +497,7 @@
         </div>
         <div class="lineSpace"></div>
         <div class="row">
-            <input class="buttonGreen width-10" type="submit" value="Submit">
+            <input class="buttonGreen width-10" type="submit" value="Submit" onclick="waitingDialog.show();">
         </div>
     </form>
 </div>
