--- a/src/main/resources/templates/form/formViewAdmin.html
+++ b/src/main/resources/templates/form/formViewAdmin.html
@@ -264,7 +264,7 @@
         </div>
         <p></p>
         <div class="row">
-            <input class="buttonGreen width-10" type="submit" value="Submit">
+            <input class="buttonGreen width-10" type="submit" value="Submit" onclick="waitingDialog.show();">
         </div>
     </form>
 </div>
