--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,6 +3,7 @@
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <script src="jquery-3.3.1.js" th:src="@{/jquery-3.3.1.js}"></script>
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
+    <script src="./js/waitingDialog.js" th:src="@{/js/waitingDialog.js}"></script>
     <script src="./dist-res/js/bootstrap-datepicker-custom.js" th:src="@{/dist-res/js/bootstrap-datepicker-custom.js}"></script>
     <script src="./dist-res/locales/bootstrap-datepicker.en-GB.min.js" th:src="@{/dist-res/locales/bootstrap-datepicker.en-GB.min.js}" charset="UTF-8" ></script>
     <link rel="stylesheet" type="text/css" href="css/Form-css.css" th:href="@{/css/Form-css.css}">
