--- a/src/main/resources/static/css/Form-css.css
+++ b/src/main/resources/static/css/Form-css.css
@@ -14,6 +14,10 @@ input[type=text], select, textarea {
 label {
     padding: 12px 12px 12px 0;
     display: inline-block;
+    white-space: pre-wrap;
+    overflow: hidden;
+     text-overflow:ellipsis;
+     word-wrap:break-word;
 }
 
 star{
